WIP: trying different typefaces

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <title>Josh's Blog</title>
   <meta charset=utf-8>
   <link href=/css/style.css rel=stylesheet>
+  <!-- <link href=//openfontlibrary.org/face/judson rel=stylesheet> -->
+  <!-- <link href=//openfontlibrary.org/face/letterng rel=stylesheet> -->
+  <!-- <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet> -->
+  <link href=//openfontlibrary.org/face/anonymous-pro rel=stylesheet>
 </head>
 
 <body class=light>
