Fix date handling
- get the date from the post's author date from git
- show the year

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ☼☽
   </a>
 <ul id=posts>
-<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot <span class=date>18 September</span></a></li>
+<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot <span class=date>13 September, 2013</span></a></li>
 </ul>
 <footer>
   <ul>
