--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Josh's Blog</title>
   <meta charset=utf-8>
   <link href=/css/style.css rel=stylesheet>
+  <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
 </head>
 
 <body class=light>
@@ -24,6 +25,7 @@
   <ul>
     <li> colors from <a href=http://ethanschoonover.com/solarized>solarized</a> by <a href=http://ethanschoonover.com/>Ethan Schoonover</a> </li>
     <li> code highlighted by <a href=http://pygments.org/>pygments</a> </li>
+    <li> fonts from <a href=http://openfontlibrary.org/>open font library</a> </li>
     <li> i'm called <a href=https://github.com/joshuarh>joshuarh</a> on github </li>
     <li> i'm called <a href=https://coderwall.com/joshuarh>joshuarh</a> on coderwall</li>
     <li> i'm called <a href=https://twitter.com/inyourdom>inyourdom</a> on twitter </li>
