Fix title text for light/dark toggle button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     id=theme-toggle
     height=24
     width=24
-    alt='light bulb: click here to toggle light/dark themes'
-    title='light bulb: click here to toggle light/dark themes'>
+    alt='toggle light/dark themes'
+    title='toggle light/dark themes'>
     ☼☽
   </a>
 <ul id=posts>
