Update footers/posts to reflect username change

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     <li> colors from <a href=http://ethanschoonover.com/solarized>solarized</a> by <a href=http://ethanschoonover.com/>Ethan Schoonover</a> </li>
     <li> code highlighted by <a href=http://pygments.org/>pygments</a> </li>
     <li> fonts from <a href=http://openfontlibrary.org/>open font library</a> </li>
-    <li> i'm called <a href=https://github.com/joshuarh>joshuarh</a> on github </li>
-    <li> i'm called <a href=https://coderwall.com/joshuarh>joshuarh</a> on coderwall</li>
-    <li> i'm called <a href=https://twitter.com/inyourdom>inyourdom</a> on twitter </li>
+    <li> i'm called <a href=https://github.com/losingkeys>losingkeys</a> on github </li>
+    <li> i'm called <a href=https://twitter.com/losingkeys>losingkeys</a> on twitter </li>
   </ul>
 </footer>
 <script src=/js/app.js></script>
