--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
   <h1 id=posts-header>Josh's Blog</h1>
 
   <a href=javascript:void(0)
+    id=download-links-toggle
+    class=control-link
+    alt='toggle download links'
+    title='toggle download links'>
+    ↓
+  </a>
+
+  <a href=javascript:void(0)
     id=theme-toggle
-    height=24
-    width=24
+    class=control-link
     alt='toggle light/dark themes'
     title='toggle light/dark themes'>
     ☼☽
   </a>
+
 <ul id=posts>
-<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot <span class=date>13 September, 2013</span></a></li>
+<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> 						<span class=date>13 September, 2013</span>						<a href="/posts/Put-Vim-on-Autopilot.pdf" class='post-download-link post-pdf-link' alt='download as pdf' title='download as pdf'> ↓ pdf </a> 						<a href="/src/posts/Put-Vim-on-Autopilot.org" class='post-download-link post-source-link' alt='download as org-mode text' title='download as org-mode text'> ℹ source </a> 				</li>
 </ul>
 <footer>
   <ul>
