--- a/index.html
+++ b/index.html
@@ -1,44 +1,1 @@
-<!doctype html>
-<html>
-<head>
-  <title>Josh's Blog</title>
-  <meta charset=utf-8>
-  <meta name=viewport content=initial-scale=1>
-  <link href=/css/style.css rel=stylesheet>
-  <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
-</head>
-
-<body class=light>
-  <h1 id=posts-header>Josh's Blog</h1>
-
-  <a href=javascript:void(0)
-    id=download-links-toggle
-    class=control-link
-    alt='toggle download links'
-    title='toggle download links'>
-    ↓
-  </a>
-
-  <a href=javascript:void(0)
-    id=theme-toggle
-    class=control-link
-    alt='toggle light/dark themes'
-    title='toggle light/dark themes'>
-    ☼☽
-  </a>
-
-<ul id=posts>
-<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> 						<span class=date>13 September, 2013</span>						<a href="/posts/Put-Vim-on-Autopilot.pdf" class='post-download-link post-pdf-link' alt='download as pdf' title='download as pdf'> ↓ pdf </a> 						<a href="/src/posts/Put-Vim-on-Autopilot.org" class='post-download-link post-source-link' alt='download as org-mode text' title='download as org-mode text'> ℹ source </a> 				</li>
-</ul>
-<footer>
-  <ul>
-    <li> colors from <a href=http://ethanschoonover.com/solarized>solarized</a> by <a href=http://ethanschoonover.com/>Ethan Schoonover</a> </li>
-    <li> code highlighted by <a href=http://pygments.org/>pygments</a> </li>
-    <li> fonts from <a href=http://openfontlibrary.org/>open font library</a> </li>
-    <li> i'm called <a href=https://github.com/losingkeys>losingkeys</a> on github </li>
-    <li> i'm called <a href=https://twitter.com/losingkeys>losingkeys</a> on twitter </li>
-  </ul>
-</footer>
-<script src=/js/app.js></script>
-</body>
-</html>
+<!doctype html><html><head><title>Josh's Blog</title><meta charset="utf-8"/><meta name="viewport" content="initial-scale=1"/><link href="/css/style.css" rel="stylesheet"/><link href="//openfontlibrary.org/face/lato-regular" rel="stylesheet"/></head><body class="light"><h1 id="posts-header">Josh's Blog</h1><a href="javascript:void(0)" id="download-links-toggle" class="control-link" alt="toggle download links" title="toggle download links">↓</a> <a href="javascript:void(0)" id="theme-toggle" class="control-link" alt="toggle light/dark themes" title="toggle light/dark themes">☼☽</a><ul id="posts"><li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> <span class="date">13 September, 2013</span><a href="/posts/Put-Vim-on-Autopilot.pdf" class="post-download-link post-pdf-link" alt="download as pdf" title="download as pdf">↓ pdf</a> <a href="/src/posts/Put-Vim-on-Autopilot.org" class="post-download-link post-source-link" alt="download as org-mode text" title="download as org-mode text">ℹ source</a></li></ul><footer><ul><li>colors from <a href="http://ethanschoonover.com/solarized">solarized</a> by <a href="http://ethanschoonover.com/">Ethan Schoonover</a></li><li>code highlighted by <a href="http://pygments.org/">pygments</a></li><li>fonts from <a href="http://openfontlibrary.org/">open font library</a></li><li>i'm called <a href="https://github.com/losingkeys">losingkeys</a> on github</li><li>i'm called <a href="https://twitter.com/losingkeys">losingkeys</a> on twitter</li></ul></footer><script src="/js/app.js"></script></body></html>
