--- a/index.html
+++ b/index.html
@@ -7,26 +7,32 @@
   <link href=/css/style.css rel=stylesheet>
   <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
 </head>
-
 <body class=light>
-  <h1 id=posts-header>Josh's Blog</h1>
-
   <a href=javascript:void(0)
-    id=download-links-toggle
-    class=control-link
-    alt='toggle download links'
-    title='toggle download links'>
-    ↓
+    id=menu-toggle
+    class=menu-item
+    alt='toggle the menu'
+    title='toggle the menu'>
+   ☰
   </a>
 
   <a href=javascript:void(0)
     id=theme-toggle
-    class=control-link
+    class=menu-item
     alt='toggle light/dark themes'
     title='toggle light/dark themes'>
     ☼☽
   </a>
 
+  <a href=javascript:void(0)
+    id=download-links-toggle
+    class=menu-item
+    alt='toggle download links'
+    title='toggle download links'>
+    ↓
+  </a>
+
+  <h1 id=posts-header>Josh's Blog</h1>
 <ul id=posts>
 <li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> 						<span class=date>13 September, 2013</span>						<a href="/posts/Put-Vim-on-Autopilot.pdf" class='post-download-link post-pdf-link' alt='download as pdf' title='download as pdf'> ↓ pdf </a> 						<a href="/src/posts/Put-Vim-on-Autopilot.org" class='post-download-link post-source-link' alt='download as org-mode text' title='download as org-mode text'> ℹ source </a> 				</li>
 </ul>
