--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <h1 id=posts-header>Josh's Blog</h1>
 <ul id=posts>
-<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> 						<span class=date>13 September, 2013</span>						<a href="/posts/Put-Vim-on-Autopilot.pdf" class='post-download-link post-pdf-link' alt='download as pdf' title='download as pdf'> ↓ pdf </a> 						<a href="/src/posts/Put-Vim-on-Autopilot.org" class='post-download-link post-source-link' alt='download as org-mode text' title='download as org-mode text'> ℹ source </a> 				</li>
+<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> 						<span class=date>13 April, 2014</span>						<a href="/posts/Put-Vim-on-Autopilot.pdf" target=_blank class='post-download-link post-pdf-link' alt='download as pdf' title='download as pdf'> 𝒫 pdf </a> 						<a href="/posts/Put-Vim-on-Autopilot.txt" target=_blank class='post-download-link post-source-link' alt='download as text' title='download as text'> ✏ text </a> 						<a href="/src/posts/Put-Vim-on-Autopilot.org" target=_blank class='post-download-link post-source-link' alt='download as org-mode text' title='download as org-mode text'> ⌘ source </a> 				</li>
 </ul>
 <footer>
   <ul>
