--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Josh's Blog</title>
   <meta charset=utf-8>
-  <meta name=viewport content=initial-scale=1>
+  <meta name=viewport content='initial-scale=1'>
   <link href=/css/style.css rel=stylesheet>
   <link href=//openfontlibrary.org/face/lato-regular rel=stylesheet>
 </head>
@@ -11,7 +11,6 @@
   <a href=javascript:void(0)
     id=menu-toggle
     class=menu-item
-    alt='toggle the menu'
     title='toggle the menu'>
    ☰
   </a>
@@ -19,7 +18,6 @@
   <a href=javascript:void(0)
     id=theme-toggle
     class=menu-item
-    alt='toggle light/dark themes'
     title='toggle light/dark themes'>
     ☼☽
   </a>
@@ -27,7 +25,6 @@
   <a href=javascript:void(0)
     id=download-links-toggle
     class=menu-item
-    alt='toggle download links'
     title='toggle download links'>
     ↓
   </a>
