--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
   <h1 id=posts-header>Josh's Blog</h1>
 <ul id=posts>
-<li><a href="/posts/Shell-Tricks.html">Shell Tricks</a> 						<span class=date>25 April, 2014</span>						<a href="/posts/Shell-Tricks.pdf" target=_blank class='post-download-link post-pdf-link' title='download as pdf'> pdf </a> 						<a href="/posts/Shell-Tricks.txt" target=_blank class='post-download-link post-source-link' title='download as text'> text </a> 						<a href="/src/posts/Shell-Tricks.org" target=_blank class='post-download-link post-source-link' title='download as org-mode text'> source </a> 				</li>
-<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> 						<span class=date>13 September, 2013</span>						<a href="/posts/Put-Vim-on-Autopilot.pdf" target=_blank class='post-download-link post-pdf-link' title='download as pdf'> pdf </a> 						<a href="/posts/Put-Vim-on-Autopilot.txt" target=_blank class='post-download-link post-source-link' title='download as text'> text </a> 						<a href="/src/posts/Put-Vim-on-Autopilot.org" target=_blank class='post-download-link post-source-link' title='download as org-mode text'> source </a> 				</li>
+<li><a href="/posts/Shell-Tricks.html">Shell Tricks</a> 						<span class=date>25 April, 2014</span>						<a href="/posts/Shell-Tricks.pdf" target=_blank class=post-download-link title='download as pdf'> pdf </a> 						<a href="/posts/Shell-Tricks.txt" target=_blank class=post-download-link title='download as text'> text </a> 						<a href="/src/posts/Shell-Tricks.org" target=_blank class=post-download-link title='download as org-mode text'> source </a> 				</li>
+<li><a href="/posts/Put-Vim-on-Autopilot.html">Put Vim on Autopilot</a> 						<span class=date>13 September, 2013</span>						<a href="/posts/Put-Vim-on-Autopilot.pdf" target=_blank class=post-download-link title='download as pdf'> pdf </a> 						<a href="/posts/Put-Vim-on-Autopilot.txt" target=_blank class=post-download-link title='download as text'> text </a> 						<a href="/src/posts/Put-Vim-on-Autopilot.org" target=_blank class=post-download-link title='download as org-mode text'> source </a> 				</li>
 </ul>
 <footer>
   <ul>
